--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--=============== FAVICON ===============-->
-        <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+        <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 
         <!--=============== REMIX ICONS ===============-->
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
         <!--=============== CSS ===============-->
-        <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="stylesheet" href="styles.css">
 
         <title>Responsive plants website - Bedimcode</title>
     </head>
@@ -60,7 +60,7 @@
             <!--==================== HOME ====================-->
             <section class="home" id="home">
                 <div class="home__container container grid">
-                    <img src="assets/img/home.png" alt="" class="home__img">
+                    <img src="img/home.png" alt="" class="home__img">
                     <div class="home__data">
                         <h1 class="home__title">
                             Plants will make <br>your house look beautiful
@@ -90,7 +90,7 @@
             <!--==================== ABOUT ====================-->
             <section class="about section container" id="about">
                 <div class="about__container grid">
-                    <img src="assets/img/about.png" alt="" class="about__img">
+                    <img src="img/about.png" alt="" class="about__img">
 
                     <div class="about__data">
                         <h2 class="section__title about__title">
@@ -164,7 +164,7 @@
                 <div class="product__container grid">
                     <article class="product__card">
                         <div class="product__circle"></div>
-                        <img src="assets/img/product1.png" alt="" class="product__img">
+                        <img src="img/product1.png" alt="" class="product__img">
                         <h3 class="product__title">Cacti Plant</h3>
                         <span class="product__price">₹19.99</span>
                         <button class="button--flex product__button">
@@ -174,7 +174,7 @@
 
                     <article class="product__card">
                         <div class="product__circle"></div>
-                        <img src="assets/img/product2.png" alt="" class="product__img">
+                        <img src="img/product2.png" alt="" class="product__img">
                         <h3 class="product__title">Cactus Plant</h3>
                         <span class="product__price">₹11.99</span>
                         <button class="button--flex product__button">
@@ -184,7 +184,7 @@
 
                     <article class="product__card">
                         <div class="product__circle"></div>
-                        <img src="assets/img/product3.png" alt="" class="product__img">
+                        <img src="img/product3.png" alt="" class="product__img">
                         <h3 class="product__title">Aloe Vera Plant</h3>
                         <span class="product__price">₹7.99</span>
                         <button class="button--flex product__button">
@@ -194,7 +194,7 @@
 
                     <article class="product__card">
                         <div class="product__circle"></div>
-                        <img src="assets/img/product4.png" alt="" class="product__img">
+                        <img src="img/product4.png" alt="" class="product__img">
                         <h3 class="product__title">Succulent Plant</h3>
                         <span class="product__price">₹21.99</span>
                         <button class="button--flex product__button">
@@ -204,7 +204,7 @@
 
                     <article class="product__card">
                         <div class="product__circle"></div>
-                        <img src="assets/img/product5.png" alt="" class="product__img">
+                        <img src="img/product5.png" alt="" class="product__img">
                         <h3 class="product__title">Succulent Plant</h3>
                         <span class="product__price">₹15.99</span>
                         <button class="button--flex product__button">
@@ -214,7 +214,7 @@
 
                     <article class="product__card">
                         <div class="product__circle"></div>
-                        <img src="assets/img/product6.png" alt="" class="product__img">
+                        <img src="img/product6.png" alt="" class="product__img">
                         <h3 class="product__title">Green Plant</h3>
                         <span class="product__price">₹19.99</span>
                         <button class="button--flex product__button">
@@ -429,10 +429,10 @@
                 <div class="footer__content">
                     <h3 class="footer__title">We accept all Credit Cards</h3>
                     <div class="footer__cards">
-                        <img src="assets/img/card1.png" alt="" class="footer__cards">
-                        <img src="assets/img/card2.png" alt="" class="footer__cards">
-                        <img src="assets/img/card3.png" alt="" class="footer__cards">
-                        <img src="assets/img/card4.png" alt="" class="footer__cards">
+                        <img src="img/card1.png" alt="" class="footer__cards">
+                        <img src="img/card2.png" alt="" class="footer__cards">
+                        <img src="img/card3.png" alt="" class="footer__cards">
+                        <img src="img/card4.png" alt="" class="footer__cards">
                     </div>
                 </div>
             </div>
@@ -449,6 +449,6 @@
         <script src=""></script>
         
         <!--=============== MAIN JS ===============-->
-        <script src="assets/js/main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
